# libtorch_app

./: CMakeLists.txt  example-app.cpp
